--- a/project_description/new_latex_documentation/msc-docs-template/2-state-of-the-art.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/2-state-of-the-art.tex
@@ -1,4 +1,4 @@
-\mychapter{2}{Istniejące rozwiązania w zakresie planowania ruchu i koordynacji ruchu na skrzyżowaniach} \label{chap:state-of-the-art}
+\mychapter{2}{2. Istniejące rozwiązania w zakresie planowania ruchu i koordynacji ruchu na skrzyżowaniach} \label{chap:state-of-the-art}
 
 \section{Planowanie ruchu na skrzyżowaniach}
 
