Dividing running endToEndTest into 2 tasks

--- a/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
@@ -40,7 +40,10 @@ Celem pracy jest opracowanie metody planującej ruch drogowy na skrzyżowaniach 
 Wynikiem rozwiązania jest szczegółowy opis, który dokładnie planuje ruch każdego z samochodów w celu najszybszego i bezpiecznego opuszczenia skrzyżowania.
 \newline
 \newline
-System zapewnia unikanie kolizji oraz optymalny dojazd do celu pojazdów na zadanej sieci skrzyżowań. Przez sieć skrzyżowań, rozumiane jest skrzyżowanie ze sobą kilku dróg.
+System zapewnia unikanie kolizji oraz optymalny dojazd do celu pojazdów na zadanej sieci skrzyżowań.
+\newline
+\newline
+W pracy używane będą dwa pojęcia odnoszące się do skrzyżowań: sieć skrzyżowań oraz skrzyżowanie. Skrzyżwanie oznacza przecięcie się dwóch pasów. Sieć skrzyżowań oznacza przecięcia się wielu pasów.
 
 \section{Struktura pracy}
 TODO
