--- a/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
@@ -27,7 +27,7 @@ Do modelu przekazać należy także maksymalną prędkość, którą wszystkie s
 
 \section{Zmodyfikowany algorytm A*}
 
-Zaprezentowany w tej pracy zmodyfikowanym algorytmu A* jest oparty na stanach, gdzie pojedyńczym stanem jest rozłożenie samochodów na drogach wraz z ich prędkościami. Algorytm zaczynając od zadanego stanu początkowego analizuje możliwe stany sąsiednie i wybiera najszybszą ścieżkę kierując się funkcją heurystyki. Ścieżka prowadzi do określonego celu. W przypadku opracowanego rozwiązania, celem jest przekroczenie przez wszystkie samochody ostatniego skrzyżowania na drogach, na których się znajdują. Przez ostatnie skrzyżowanie, rozumiane jest skrzyżowanie aktualnej drogi z ostatnią drogą spośród zbioru dróg, które się z aktualną droga krzyżują.
+Zaprezentowany w tej pracy zmodyfikowanym algorytmu A* jest oparty na stanach, gdzie pojedyńczym stanem jest rozłożenie samochodów na drogach wraz z ich prędkościami. Algorytm zaczynając od zadanego stanu początkowego analizuje możliwe stany sąsiednie i wybiera najszybszą ścieżkę kierując się funkcją heurystyki. Ścieżka prowadzi do określonego celu. W przypadku opracowanego rozwiązania, celem jest przekroczenie przez wszystkie samochody ostatniego skrzyżowania na drogach, na których się znajdują.
 \newline
 \indent
 Zrealizowany Algorytm A* jest generyczny. Do algorytmu przekazujemy klasę reprezentującą dowolny stan. Klasa musi implementować metodę 'neighbours', która zwraca stany sąsiednie dla danej instancji stanu. Do algorytmu przekazywana jest także funkcja heurystyki, zależna od danych danego stanu.
@@ -55,7 +55,7 @@ W metodzie usuwane są także stany powodujące kolizje, co będzie opisane w na
 W rozwiązaniu zaimplementowane zostało symulowanie pomyłek pojazdów. Pomyłka polega na niezastosowaniu się pojazdu do przekazanego mu planu. Bezpieczeństwo zapewnione jest przez parametr bezpieczeństwa. Parametrem bezpieczeństwa jest liczba odcinków drogi utrzymywana między pojazdami. Wartość parametru można przekazać do systemu.
 \newline
 \indent
-Rozwiązanie zostało uruchamiane na jednym wątku procesora. W przypadku wykorzystania wielu wątków, metoda może wyliczyć plany dla pojazdów przewidując ich pomyłki. Dla przykładu, mając 4 pojazdy na skrzyżowaniu dwóch dróg, załóżmy że w każdym kroku czasowym jeden z nich, myli się z pewnym prawdopodobieństem o jeden odcinek drogi. Wyliczone wcześniej plany, z góry przewidując takie pomyłki - dostarczają nowy, poprawny plan. Takie rozwiązanie korzystając z nowych, poprawionych błędów zmniejsza prawdopodobieństwo kolizji, w razie pomyłek pojazdów.
+Rozwiązanie zostało uruchamiane na jednym wątku procesora. W przypadku wykorzystania wielu wątków, metoda może wyliczyć plany dla pojazdów przewidując ich pomyłki. Dla przykładu, mając 4 pojazdy na skrzyżowaniu dwóch dróg załóżmy, że w każdym kroku czasowym jeden z nich, myli się z pewnym prawdopodobieństem o jeden odcinek drogi. Wyliczone wcześniej plany, z góry przewidując takie pomyłki - dostarczają nowy, poprawny plan. Takie rozwiązanie korzystając z nowych, poprawionych planów zmniejsza prawdopodobieństwo kolizji, w razie pomyłek pojazdów.
 
 \section{Unikanie kolizji}
 
@@ -64,7 +64,7 @@ Koniecznym elementem w koordynacji ruchu na skrzyżowaniach wielu pojazdów jest
 \item Unikanie kolizji aut poruszających się po tym samym pasie
 \item Unikanie kolizji na skrzyżowaniach
 \end{enumerate}
-Implementacja unikania kolizji pojazdów na tym samym pasie polega na policzeniu obszarów dla samochodów znajdujących się na tym samym pasie, który będą one obejmowały w jednym kroku czasowym wraz z uwzględnieniem parametru bezpieczeństwa. Jeżeli obszary dwóch samochdów na jednym pasie pokrywają się - taki stan jest usuwany i wówczas metoda 'neighbours' nie zwróci go jako stanu sąsiedniego. Na rysunku \ref{collision-avoidance-lane} przedstawiony jest przykład unikania kolizji dla samochodów poruszających się jednym pasem. Przykład przedstawiony jest z parametrem bezpieczeństwa równym jeden. Samochody, mając przed sobą inny pojazd, czekają aż będzie dla nich miejsce. Stan pierwszy jest stanem startowy. Kolejno w stanie drugim, pojazd z numerem 4 rusza i zmienia swoją pozycję o jeden do przodu, ponieważ nie ma żadnego pojazdu przed nim. Reszta pojazdów stoi i czeka na miejsce. Następnie w stanie trzecim, pojazd z numerem 3 widząc, że ma miejsce porusza się o jedną pozycję do przodu. W stanie następnym na miejsce czeka jedynie samochód z numerem 1 - reszta zmienia pozycję. W kroku piątym i szóstym pojazdy mając miejsce, swobodnie opuszczają skrzyżowanie.
+Implementacja unikania kolizji pojazdów na tym samym pasie polega na policzeniu obszarów dla samochodów znajdujących się na tym samym pasie, który będą one obejmowały w jednym kroku czasowym wraz z uwzględnieniem parametru bezpieczeństwa. Jeżeli obszary dwóch samochdów na jednym pasie pokrywają się - taki stan jest usuwany i wówczas metoda 'neighbours' nie zwróci go jako stanu sąsiedniego. Na rysunku \ref{collision-avoidance-lane} przedstawiony jest przykład unikania kolizji dla samochodów poruszających się jednym pasem. Przykład przedstawiony jest z parametrem bezpieczeństwa równym jeden. Samochody, mając przed sobą inny pojazd, czekają aż będzie dla nich miejsce. Stan pierwszy jest stanem startowy. Kolejno w stanie drugim, pojazd \textbf{D} rusza i zmienia swoją pozycję o jeden do przodu, ponieważ nie ma żadnego pojazdu przed nim. Reszta pojazdów stoi i czeka na miejsce. Następnie w stanie trzecim, pojazd \textbf{C} widząc, że ma miejsce porusza się o jedną pozycję do przodu. W stanie następnym na miejsce czeka jedynie samochód \textbf{A} - reszta zmienia pozycję. W kroku piątym i szóstym pojazdy mając miejsce, swobodnie opuszczają skrzyżowanie.
 \begin{figure}[H]
     \includegraphics[width=1.0\textwidth]{collision-avoidance-lane.png}
   \caption{Unikani kolizji na pasie}
