Adding conclusions skeleton

--- a/project_description/new_latex_documentation/msc-docs-template/6-conclusions.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/6-conclusions.tex
@@ -1,13 +1,24 @@
-\mychapter{6}{6. Wnioski} \label{chap:conclusions}
+\mychapter{6}{6. Zakończenie} \label{chap:conclusions}
 
-\section{Podrozdział}
-
-\bt
-
-\section{Podrozdział}
-
-\bt
-
-\section{Podrozdział}
-
-\bt
+W pracy przedstawiona została metoda planowania ruchu drogowego z wykorzystaniem algorytmu A*
+\newline
+\newline
+W rozwiązaniu zaimplementowana została modyfikacja algorytmu A*.
+\newline
+\newline
+Analizując wyniki przedstawione w rozdziale 5 można wnioskować, że teza przedstawiona w rozdziale 3 jest prawdziwa. 
+\newline
+\newline
+Porównanie opisywanej w tej pracy metody wraz z koordynacją ruchu przy użyciu świateł drogowych pokazuje, że metoda daje lepsze wyniki, jeżeli chodzi o przepustowość.
+\newline
+\newline
+W przedstawionej metodzie, zapewnione jest także rozwiązywanie kolizji oraz bezpieczeńśtwo w przypadku niezastosowania się pojazdów do planu.
+\newline
+\newline
+Rozwiązanie zostało zaprojektowane i uruchamiane na jednym wątku procesora. Używając więcej wątków, można liczyć plany wielowariantowe w celu szybkiej reakcji na pomyłki pojazdów
+\newline
+\newline
+Jak pokazują wyniki, zastosowanie metody do koordynacji ruchu na skrzyżowaniu ze sobą ośmiu dróg zaoszczędza 5-10 kroków czasowych. Korzystając z metoda dla większej ilości sieci, można zaoszczędzić dużo czasu.
+\newline
+\newline
+Z pewnością wadą metody jest złożoność obliczeniowa, która rośnie ekspotencjalnie względem liczby pojazdów znajdujących się na sieci szkrzyżowań.
