--- a/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
@@ -1,9 +1,11 @@
 \mychapter{3}{3. Teza} \label{chap:thesis}
 
-
 \section{Wprowadzenie}
 
-W pracy rozwiązywany jest problem planowania ruchu na skrzyżowaniach dróg wielopasmowych. Rozwiązanie w porównaniu do wcześniej opisanych podejść, wyróżnia się użyciem algorytmu A* do dokładnego zaplanowania ruchu dla każdego z pojazdów wraz z unikaniem kolizji. Większość przedstawionych rozwiązań opiera się o światła drogowe, co wiąże się z opóźnieniami spowodowanymi oczekiwaniem na świetle pomarańczowym, a także opóźnieniami spowodowanymi na oczekiwaniu na świetle czerwonym, kiedy na drodze poprzecznej nie ma żadnych pojazdów. Implementacja algorytmu A* jest generyczna i opiera się na stanach. Algorytm przyjmuje obiekt klasy implementującej metodę zwracającą stany sąsiednie dla stanu aktualnego. Do algorytmu przekazywane są także warunki końcowe. Algorytm przeszukuje stany korzystając z funkcji heurystyki, aż osiągnięte zostaną warunki końcowe - nie przeszukiwane są wszystkie możliwe stany. Algorytm kończy obliczenia, kiedy znajdzie stany spełniające określone warunki. Algorytm A*, moduł graficzne oraz pozostałe elementy systemu zostały napisane w języku Ruby.
+W pracy rozwiązywany jest problem planowania ruchu na skrzyżowaniach dróg wielopasmowych wraz z wymijaniem kolizji. Rozwiązaniem problemu jest podanie dokładnego planu każdemu pojazdowi. Plan ten opisuje ruch pojazdu - zmienia jego prędkość. Ruch pojazdów musi być bezpieczny. Plany przekazane pojazdom muszą być planami bezkolizyjnymi. Co więcej, system planujący ruch drogowy powinien przewidywać sytuację, w których pojazdy nie dostosują się do planu. Problem zawiera więc w sobie wyliczenie optymalnego planu poruszania się dla każdego pojazdu, usunięcie sytuacji kolizyjnych, a także wyliczenie wielu wariantów planu. Warianty planu powinny przewidywać pomyłki pojazdów i natychmiastowo korygować ruch drogowy. Trudnością w podejściu jest złożoność obliczeniowa. Rozmiar problemu rośnie bardzo szybko względem zmian w środowisku. Przez zmiany w środowisku rozumiane są zmiany położeń pojazdów oraz ich parametrów (prędkość, przyspieszenie). Rozmiarem środowiska jest liczba pojazdów na drogach, a także liczba i rozmiar dróg.
+\newline
+\indent
+Rozwiązanie w porównaniu do wcześniej opisanych podejść, wyróżnia się użyciem algorytmu A* do dokładnego zaplanowania ruchu dla każdego z pojazdów wraz z unikaniem kolizji. Większość przedstawionych rozwiązań opiera się o światła drogowe, co wiąże się z opóźnieniami spowodowanymi oczekiwaniem na świetle pomarańczowym, a także opóźnieniami spowodowanymi na oczekiwaniu na świetle czerwonym, kiedy na drodze poprzecznej nie ma żadnych pojazdów. Implementacja algorytmu A* jest generyczna i opiera się na stanach. Algorytm przyjmuje obiekt klasy implementującej metodę zwracającą stany sąsiednie dla stanu aktualnego. Do algorytmu przekazywane są także warunki końcowe. Algorytm przeszukuje stany korzystając z funkcji heurystyki, aż osiągnięte zostaną warunki końcowe - nie przeszukiwane są wszystkie możliwe stany. Algorytm kończy obliczenia, kiedy znajdzie stany spełniające określone warunki. Algorytm A*, moduł graficzne oraz pozostałe elementy systemu zostały napisane w języku Ruby.
 
 \section{Planowanie ruchu przy użyciu modyfikacji A*}
 
