--- a/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
@@ -36,22 +36,16 @@ Pomiary zostały wykonane na następującym sprzęcie:
 Zgodnie z wcześniej opisanymi założeniami dla skrzyżowania czterech dróg program został uruchomiony 30 razy dla samochodów ze zbioru \{2, 4, 6, 8, 10, 12\} co razem daje 180 uruchomień.
 \newline
 \newline
-Wykresy przedstawiające wyniki na skrzyżowaniu czterech dróg zaprezentowane są na rysunkach \ref{execution_time_10_cars_4_roads}, \ref{execution_time_12_cars_4_roads} oraz \ref{four-roads-crossroads-timesteps}
+Wykresy przedstawiające wyniki na skrzyżowaniu czterech dróg zaprezentowane są na rysunku \ref{4_roads_execution_time_new} oraz \ref{four-roads-crossroads-timesteps}
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.8\textwidth]{execution_time_10_cars_4_roads.png}
-  \caption{Wykres zależności czasu wykonania programu od liczby pojazdów (dla 2-10 pojazdów)}
-  \label{execution_time_10_cars_4_roads}
+  \includegraphics[width=1.0\textwidth]{4_roads_execution_time_new.png}
+  \caption{Wykres zależności czasu wykonania programu od liczby pojazdów}
+  \label{4_roads_execution_time_new}
 \end{figure}
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.8\textwidth]{execution_time_12_cars_4_roads.png}
-  \caption{Wykres zależności czasu wykonania programu od liczby pojazdów (dla 12 pojazdów)}
-  \label{execution_time_12_cars_4_roads}
-\end{figure}
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.8\textwidth]{4_roads_timesteps_2.png}
+  \includegraphics[width=1.0\textwidth]{4_roads_timesteps_new.png}
   \caption{Wykres zależności kroków czasowych od liczby pojazdów}
   \label{four-roads-crossroads-timesteps}
 \end{figure}
@@ -61,24 +55,18 @@ Wykresy przedstawiające wyniki na skrzyżowaniu czterech dróg zaprezentowane s
 Dla skrzyżowania ośmiu dróg też zostało przeprowadzone 180 uruchomień.
 \newline
 \newline
-Wykresy przedstawiające wyniki na skrzyżowaniu ośmiu dróg zaprezentowane są na rysunkach \ref{execution_time_10_cars_8_roads}, \ref{execution_time_12_cars_8_roads} oraz \ref{eight-roads-crossroads-timesteps}
+Wykresy przedstawiające wyniki na skrzyżowaniu ośmiu dróg zaprezentowane są na rysunkach \ref{8_roads_execution_time_new} oraz \ref{8_roads_timesteps_new}
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.8\textwidth]{execution_time_10_cars_8_roads.png}
+  \includegraphics[width=1.0\textwidth]{8_roads_execution_time_new.png}
   \caption{wykres zależności czasu wykonania programu od liczby pojazdów (dla 2-10 pojazdów)}
-  \label{execution_time_10_cars_8_roads}
+  \label{8_roads_execution_time_new}
 \end{figure}
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.8\textwidth]{execution_time_12_cars_8_roads.png}
-  \caption{wykres zależności czasu wykonania programu od liczby pojazdów (dla 12 pojazdów)}
-  \label{execution_time_12_cars_8_roads}
-\end{figure}
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.8\textwidth]{8_roads_timesteps_2.png}
+  \includegraphics[width=1.0\textwidth]{8_roads_timesteps_new.png}
   \caption{Wykres zależności kroków czasowych od liczby pojazdów}
-  \label{eight-roads-crossroads-timesteps}
+  \label{8_roads_timesteps_new}
 \end{figure}
 
 \section{Wnioski z pomiarów na skrzyżowaniach czterech i ośmiu dróg}
